--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -44,12 +44,31 @@
         {% include "_lcars_filler.html" with color="dodger-blue" bottom_left_outer_elbow=True label="FUCK BOKAI" only %}
     </div>
     <div class="lcars-group__content">
-        {% include "will_of_the_prophets/board/_legend.html" %}
+        {% include "will_of_the_prophets/board/_legend.html" with special_square_types=current_square_types only %}
     </div>
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
         {% include "_lcars_filler.html" with color="dodger-blue" bottom_left_inner_elbow=True only %}
     </div>
 </section>
+
+<section class="lcars-group">
+    <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
+        {% include "_lcars_filler.html" with color="orange-peel" top_left_inner_elbow=True only %}
+    </div>
+    <div class="lcars-group__side-bar lcars-group__side-bar--left">
+        {% include "_lcars_filler.html" with color="orange-peel" top_left_outer_elbow=True only %}
+        {% include "_lcars_filler.html" with color="melrose" label="HALL OF FAME" only %}
+        {% include "_lcars_filler.html" with color="lavender-purple" label="" only %}
+        {% include "_lcars_filler.html" with color="dodger-blue" bottom_left_outer_elbow=True label="" only %}
+    </div>
+    <div class="lcars-group__content">
+        {% include "will_of_the_prophets/board/_legend.html" with special_square_types=archived_square_types only %}
+    </div>
+    <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
+        {% include "_lcars_filler.html" with color="dodger-blue" bottom_left_inner_elbow=True only %}
+    </div>
+</section>
+
 
 {% include "will_of_the_prophets/_footer.html" %}
 
