--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -17,13 +17,13 @@
     <div class="lcars-group__content">
         <h2 class="lcars-group__content-header">
             <span class="no-break">GAME OF BUTTHOLES</span> •
-            <span class="no-break">THE WILL OF THE CARETAKER</span>
+            <span class="no-break">THE WILL OF THE RIKER - QUANTUM LEAP</span>
         </h2>
 
         {{ board }}
 
         <p class="lcars-group__text">
-            Game of Buttholes: The Will of the Caretaker is a board game played by the hosts of
+            Game of Buttholes: The Will of the Riker - Quantum Leap is a board game played by the hosts of
             <a href="http://gagh.biz" target="_top">The Greatest Generation</a>, a Star Trek podcast by two guys who are
             a bit embarrassed to have a Star Trek podcast.
         </p>
